# magicbook

./: .dockerignore  .env  .gitignore  .python-version  1  Dockerbase  Dockerfile  KV_STORE_API.md  LOGGING.md  MYSQL_MIGRATION.md  README.md  bunfig.toml  category.py  docker-compose.yaml  header.py  log.py  main.py  mongo-init.js  mse.py  nohup.out  package-lock.json  package.json  pyproject.toml  requirements.txt  test.http  test.py  tsconfig.json
.nicegui/: storage-user-541d3479-ba40-4309-b175-751c967fcac0.json  storage-user-83f33855-3521-46bd-9860-bd4b0b9e9311.json  storage-user-c9988da1-21a9-4004-9b9a-210bc17029e9.json
backend/: env.ts  init.ts  server.ts  test-mongo-auth.ts  test-mongo-connection.ts  test-mysql-connection.ts  test.ts  tsconfig.json  workers.ts
backend/common/: constants.ts  database.ts  dir.ts  file-cleaner.ts  hash.ts  ip.ts  logger.ts  retry.ts
backend/database/: database.ts  mysql.ts
bioinformatics/: __init__.py  split_targets.py  tcmsp.py
cert/: cert.pem  key.pem
common/: common.py  dialog_run.py  download.py  mp_pool.py  pages.py  process_pool.py  txt_type_detect.py  util.py
examples/: simple-cli.ts
frontend/: index.html  tsconfig.json  vite.config.js
scripts/: start.sh
toolbox/: __init__.py  authlib_jwt.py  base64_func.py  cm_ext.js  convert_view.py  endecode_view.py  http_func.py  http_req.py  http_view.py  json_ui.py  jwt_decode_encode.py  jwt_func.py  pdf_func.py  pdf_op.py  pdf_view.py  time.py  time_func.py  time_view.py  url_codec.py
worker/: common.ts  split_herb_targets_to_lines.ts  template.ts  test_worker.ts
(+77 files in other folders)
