[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
[project]
name = "magicbook"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "dicttoxml2>=2.1.0",
    "dill>=0.4.0",
    "fastmcp>=2.10.6",
    "mcp>=1.12.0",
    "nicegui>=2.21.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyjwt>=2.10.1",
    "pymupdf>=1.26.3",
    "requests>=2.32.4",
    "slot>=0.3.0",
    "xmltodict>=0.14.2",
]
